--- a/.gitignore
+++ b/.gitignore
@@ -25,3 +25,7 @@ site-lisp/adventur-mode
 /projectile.cache
 /transient/history.el
 /transient/values.el
+dap-breakpoints
+# files for dap-mode vscode extension
+/.extension
+.dap-breakpoints
