Steve purcell commit.

--- a/.gitignore
+++ b/.gitignore
@@ -1,31 +1,53 @@
-auto-save-list
-
-autosave/
-backups
-*~
-.places
-session.*
-tramp
-elpa
-swank
-emms
-site-lisp/adventur-mode
+/url/cache
+/.emacs.desktop
+/auto-save-list
+/network-security.data
+/.session
+/session.*
+/custom.el
 *.elc
-.DS_Store
-.yas-compiled-snippets.el
-.cask
-/url/
-/var/
-/.sx/
-/ensime/
+CVS
+.svn
+*~
+.cvsignore
+.*.lock
+/tramp
+/TODO
+/.org-id-locations
+cookies
+/newsticker
+\#*
+/elpa
+/elpa-*
+site-lisp/package/
+/swank
+/.mc-lists.el
+/var
+/.sqli_history
+/frame-restore-parameters
+/.achievements
+/.bookmarks.el
 /history
+/helm-adaptive-history
+/thumbs/
+/emms/
+/.smex-items
+/image-dired/
+/eshell
+/.cask/
+/.sx/
+/org-clock-save.el
+/ditaa*.jar
 /ido.last
 /recentf
+/viper
 /projectile-bookmarks.eld
-/projectile.cache
-/transient/history.el
-/transient/values.el
-dap-breakpoints
-# files for dap-mode vscode extension
-/.extension
-.dap-breakpoints
+/anaconda-mode/
+/.historian
+/.uptimes.el
+/rake.cache
+/plantuml.jar
+/magithub
+.cache/
+/forge-database.sqlite
+/transient
